test/errors/syntax_error/zs/unexpected_eof_in_field_definition_error.zs
package unexpected_eof_in_field_definition_error;

struct UnexpectedEofInFieldDefinition
{
    int32
